creaing css file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Document title -->
   <title>Bootstrap Portfolio</title>
+  <!-- Character set -->
   <meta charset="utf-8">
+  <!-- The following code makes the document responsive accross different devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Linking with Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Linking with CSS -->
+  <link rel="stylesheet" type="text/css" href="">
 
 </head>
 <body>
