--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Document title -->
-  <title>Bootstrap Portfolio</title>
+  <title>About | Ornela Hunda </title>
   <!-- Character set -->
   <meta charset="utf-8">
   <!-- The following code makes the document responsive accross different devices -->
@@ -44,7 +44,7 @@ Ornela Hunda
 
 <!-- Center content of the document -->
 
-<div class="wrapper">
+<div class="wrapper"style="background-image:url(assets/images/dust_scratches.png)">
 <div class="row">
 
     
