adding links to portfolio

--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Document title -->
-  <title>Bootstrap Portfolio</title>
+  <title>Contact | Ornela Hunda </title>
   <!-- Character set -->
   <meta charset="utf-8">
   <!-- The following code makes the document responsive accross different devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Linking with Bootstrap -->
   <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+    crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
   <!-- Linking with CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
 <!-- This is the body of the page and contains the visible part of the 
-    website --> 
+    website -->
 <body>
 
-<!-- PAGE HEADER NAV BAR -->
-
-<nav class="navbar navbar-default">
-   <div class="container">
-<div class="navbar-header">
-Ornela Hunda
-</div> 
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<ul class="nav navbar-nav navbar-right">
-    <li><a href="index.html" style=" border-right: 1px solid #efefef;">
-      About</a>
-      </li>
-    <li><a href="portfolio.html" style= "border-right: 1px solid #efefef;">
-      Portfolio</a>
-    </li>
-    <li><a href="contact.html">
-      Contact</a></li>
-</ul>  
-</div>                  
-</nav>      
-<!-- End of navbar -->
+  <!-- PAGE HEADER NAV BAR -->
+  <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-default navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" id="name" href="index.html"> Ornela Hunda</button>
+            </div>
+            <div class="navbar-right" id="links">
+              <ul class="nav navbar-nav">
+                <li>
+                  <a href="index.html" style=" border-right: 1px solid #efefef;">
+                    About </a>
+                </li>
+                <li>
+                  <a href="portfolio.html" style=" border-right: 1px solid #efefef;">
+                    Portfolio</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
+            </div>
+          </div>
+      </div>
+    </div>
+    </nav>
+    <!-- End of navbar -->
 
 
 <!-- Center content of the document -->
 
-<div class="wrapper">
+<div class="wrapper" id="content">
 <div class="row">
 
     
