--- a/portfolio.html
+++ b/portfolio.html
@@ -78,40 +78,40 @@
 
       <!-- content header -->
       <div class="page-header">
-        <h2>Contact</h2>
+        <h2>Portfolio</h2>
       </div>
 
 
       <div class="game">
         <a href="https://ornelahunda.github.io/Dancing-Hangman-Game/">
-          <img src="assets/images/chess.jpeg" alt="Chess" width="255px" height="180px">
+          <img src="assets/images/hangman.png" alt="Dancing Hangman" width="255px" height="180px">
           <h3>Dancing Hangman</h3>
         </a>
       </div>
 
       <div class="game">
         <a href="https://ornelahunda.github.io/Giphy-Api/">
-          <img src="assets/images/mahjong.jpeg" alt="Mahjong" width="255px" height="180px">
+          <img src="assets/images/emotions-giphy.png" alt="Giphy Api" width="255px" height="180px">
           <h3>Emotions Giphy</h3>
         </a>
       </div>
 
       <div class="game">
         <a href=" https://ornelahunda.github.io/TriviaGame/">
-          <img src="assets/images/physics_game.jpeg" alt="Physics Game" width="255px" height="180px">
+          <img src="assets/images/Trivia-Game.png" alt="Trivia Game" width="255px" height="180px">
           <h3>Trivia Game</h3>
         </a>
       </div>
       <div class="game">
         <a href=" https://ornelahunda.github.io/week-4-game/">
-          <img src="assets/images/soccer.jpeg" alt="Soccer" width="255px" height="180px">
+          <img src="assets/images/Crystal-Collector.png" alt="Crystal Collector" width="255px" height="180px">
           <h3>Crystal Collector</h3>
         </a>
       </div>
 
       <div class="game">
           <a href="https://ornelahunda.github.io/Train-Scheduler/">
-            <img src="assets/images/soccer.jpeg" alt="Soccer" width="255px" height="180px">
+            <img src="assets/images/Train-Scheduler.png" alt="Train-Scheduler" width="255px" height="180px">
             <h3>Train Scheduler</h3>
           </a>
         </div>
